# fixed-point-numbers

./: CMakeLists.txt  main.cpp
cpp/: main.cpp
cpp/benchmarks/: addition.cpp  subtraction.cpp  vector.cpp
cpp/include/: fixed_point_util.hpp  scaled_single_int.hpp  separate_ints.hpp  single_int.hpp
